Menu Driven Program Updated

--- a/python_assignment.ipynb
+++ b/python_assignment.ipynb
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter number:  2\n"
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your year 200\n"
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter pencil cost 7\n",
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a number: 8\n",
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "enter a number :  1\n",
@@ -394,36 +394,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "c4035b6e-e94b-42a8-a289-f2e284550c33",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter value for x 1\n",
-      "Enter value for y 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "-1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (b) Find error(s) in the following code (if any) and correct it by rewriting the code and underline the\n",
     "# corrections made by you:\n",
@@ -432,8 +406,10 @@
     "for i in range(0,11):\n",
     "    if x == y:\n",
     "        print(x + y)\n",
+    "        break\n",
     "    else:\n",
-    "        print(x - y)"
+    "        print(x - y)\n",
+    "        break"
    ]
   },
   {
@@ -442,7 +418,97 @@
    "id": "a3e88a82-863c-45b3-a8c1-f92948d0100e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Q10. Write a menu driven program to perform various list operations, such as:\n",
+    "# (1) Append an element\n",
+    "# (2) Insert an element\n",
+    "# (3) Append a list to the given list\n",
+    "# (4) Modify an existing element\n",
+    "# (5) Delete an existing element from its position\n",
+    "# (6) Delete an existing element with a given value\n",
+    "# (7) Sort the list in ascending order\n",
+    "# (8) Sort the list in descending order\n",
+    "# (9) Display the list\n",
+    "# Initializing an empty list\n",
+    "my_list = []\n",
+    "\n",
+    "while True:\n",
+    "    print(\"\\nMenu:\")\n",
+    "    print(\"1. Append an element\")\n",
+    "    print(\"2. Insert an element\")\n",
+    "    print(\"3. Append a list to the given list\")\n",
+    "    print(\"4. Modify an existing element\")\n",
+    "    print(\"5. Delete an existing element from its position\")\n",
+    "    print(\"6. Delete an existing element with a given value\")\n",
+    "    print(\"7. Sort the list in ascending order\")\n",
+    "    print(\"8. Sort the list in descending order\")\n",
+    "    print(\"9. Display the list\")\n",
+    "    print(\"0. Exit\")\n",
+    "\n",
+    "    choice = int(input(\"Enter your choice: \"))\n",
+    "\n",
+    "    if choice == 1:\n",
+    "        element = input(\"Enter element to append: \")\n",
+    "        my_list.append(element)\n",
+    "        print(f\"{element} appended to the list.\")\n",
+    "\n",
+    "    elif choice == 2:\n",
+    "        element = input(\"Enter element to insert: \")\n",
+    "        position = int(input(\"Enter position to insert the element at: \"))\n",
+    "        if position < 0 or position > len(my_list):\n",
+    "            print(\"Invalid position.\")\n",
+    "        else:\n",
+    "            my_list.insert(position, element)\n",
+    "            print(f\"{element} inserted at position {position}.\")\n",
+    "\n",
+    "    elif choice == 3:\n",
+    "        new_list = input(\"Enter a list of elements separated by spaces: \").split()\n",
+    "        my_list.extend(new_list)\n",
+    "        print(f\"{new_list} appended to the list.\")\n",
+    "\n",
+    "    elif choice == 4:\n",
+    "        position = int(input(\"Enter position of element to modify: \"))\n",
+    "        if position < 0 or position >= len(my_list):\n",
+    "            print(\"Invalid position.\")\n",
+    "        else:\n",
+    "            new_value = input(\"Enter the new value: \")\n",
+    "            my_list[position] = new_value\n",
+    "            print(f\"Element at position {position} modified to {new_value}.\")\n",
+    "\n",
+    "    elif choice == 5:\n",
+    "        position = int(input(\"Enter position of element to delete: \"))\n",
+    "        if position < 0 or position >= len(my_list):\n",
+    "            print(\"Invalid position.\")\n",
+    "        else:\n",
+    "            deleted_element = my_list.pop(position)\n",
+    "            print(f\"Element {deleted_element} deleted from position {position}.\")\n",
+    "\n",
+    "    elif choice == 6:\n",
+    "        value = input(\"Enter the value to delete: \")\n",
+    "        if value in my_list:\n",
+    "            my_list.remove(value)\n",
+    "            print(f\"Element {value} deleted from the list.\")\n",
+    "        else:\n",
+    "            print(\"Element not found in the list.\")\n",
+    "\n",
+    "    elif choice == 7:\n",
+    "        my_list.sort()\n",
+    "        print(\"List sorted in ascending order.\")\n",
+    "\n",
+    "    elif choice == 8:\n",
+    "        my_list.sort(reverse=True)\n",
+    "        print(\"List sorted in descending order.\")\n",
+    "\n",
+    "    elif choice == 9:\n",
+    "        print(\"Current List:\", my_list)\n",
+    "\n",
+    "    elif choice == 0:\n",
+    "        print(\"Exiting the program.\")\n",
+    "        break\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Invalid choice, please try again.\")\n"
+   ]
   }
  ],
  "metadata": {
